--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,5 +12,6 @@ add_subdirectory(item21)
 add_subdirectory(others)
 add_subdirectory(virtual)
 add_subdirectory(RTTI)
+add_subdirectory(TinyLLVMADT)
 
 
