--- a/TinySTL/.vscode/launch.json
+++ b/TinySTL/.vscode/launch.json
@@ -9,7 +9,7 @@
       "type": "cppdbg",
       "request": "launch",
       "program": "${workspaceFolder}/build/stl_test",
-      "args": ["--gtest_filter=VectorTest.ComplexType"],
+      "args": ["--gtest_filter=ListTest.*"],
       "stopAtEntry": false,
       "cwd": "${fileDirname}",
       "environment": [],
