--- a/TinySTL/.vscode/settings.json
+++ b/TinySTL/.vscode/settings.json
@@ -59,6 +59,15 @@
     "ctime": "cpp",
     "numbers": "cpp",
     "ratio": "cpp",
-    "chrono": "cpp"
+    "chrono": "cpp",
+    "fstream": "cpp",
+    "thread": "cpp",
+    "condition_variable": "cpp",
+    "cstdarg": "cpp",
+    "cstring": "cpp",
+    "numeric": "cpp",
+    "mutex": "cpp",
+    "cinttypes": "cpp",
+    "list": "cpp"
   }
 }
